<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        tools:text="@string/Codigo_Archivo" />

    <EditText
        android:id="@+id/edtcodigoArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/baloo_thambi"
        android:gravity="center_horizontal"
        android:hint="@string/Codigo_Archivo"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        tools:text="@string/Nombre_Archivo" />
    <EditText
        android:id="@+id/edtnombreArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/baloo_thambi"
        android:gravity="center_horizontal"
        android:hint="@string/Nombre_Archivo"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        tools:text="@string/Tamaño_Archivo" />

    <EditText
        android:id="@+id/edttamanoArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/baloo_thambi"
        android:gravity="center_horizontal"
        android:hint="@string/Tamaño_Archivo"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        tools:text="@string/Tipos_Archivo" />

    <EditText
        android:id="@+id/edttiposArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/baloo_thambi"
        android:gravity="center_horizontal"
        android:hint="@string/Tipos_Archivo"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />


    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E88E5"
        android:fontFamily="@font/alfa_slab_one"
        android:shadowColor="#F4F4F4"
        android:text="@string/Guardar_Archivo"
        android:textColor="#5E35B1"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/btnconsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E88E5"
        android:fontFamily="@font/alfa_slab_one"
        android:shadowColor="#FDFDFD"
        android:text="@string/Consultar_Archivo"
        android:textColor="#5E35B1"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E88E5"
        android:fontFamily="@font/alfa_slab_one"
        android:shadowColor="#FFFFFF"
        android:text="@string/Actualizar_Archivo"
        android:textColor="#5E35B1"
        app:cornerRadius="30dp" />

    <Button
        android:id="@+id/btnborrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E88E5"
        android:fontFamily="@font/alfa_slab_one"
        android:shadowColor="#FFFFFF"
        android:text="@string/Borrar_Archivo"
        android:textColor="#5E35B1"
        app:cornerRadius="30dp" />



</LinearLayout>